# vendor-intel-cic

./: README.md
host/cfc/: cfc_0.1.0_x64.deb
host/docker/: Android.mk
host/docker/aic-manager/: Dockerfile  Dockerfile.base
host/docker/aic-manager/data/ipconfig/: ipconfig0  ipconfig1  ipconfig10  ipconfig100  ipconfig101  ipconfig102  ipconfig103  ipconfig104  ipconfig105  ipconfig106  ipconfig107  ipconfig108  ipconfig109  ipconfig11  ipconfig110  ipconfig111  ipconfig112  ipconfig113  ipconfig114  ipconfig115  ipconfig116  ipconfig117  ipconfig118  ipconfig119  ipconfig12  ipconfig120  ipconfig121  ipconfig122  ipconfig123  ipconfig124  ipconfig125  ipconfig126  ipconfig127  ipconfig128  ipconfig129  ipconfig13  ipconfig130  ipconfig131  ipconfig132  ipconfig133  (+110 more)
host/docker/aic-manager/scripts/: image-entry
host/docker/aic-manager/src/: IpConfig.java
host/docker/aic-manager/src/cic_verity/: cic_verity_mgr.c
host/docker/android/: android-entry
host/docker/scripts/: aic  aic-build  build_verity_img.py
host/docker/tee/: Dockerfile  Dockerfile.build  start.sh
host/docker/tee/conf/: cickeymasterd.manifest
host/docker/tee/scripts/: apploader.sh  argv_serializer.sh  sgxsdk_build_install.sh  sign_manifests.sh
host/hostkeymasterd/: Android.bp
host/hostkeymasterd/aidl/android/hardware/hostkeymaster/: IHostKeymasterd.aidl
host/hostkeymasterd/hal/: host_keymaster_device.cpp  host_keymaster_ipc.cpp  host_keymaster_test.cpp  module.cpp
host/hostkeymasterd/hal/include/hostkeymaster/: host_keymaster_device.h  host_keymaster_ipc.h
host/hostkeymasterd/host/: CMakeLists.txt  host_keymaster_context.cpp  host_keymaster_ipc.cpp  main.cpp
host/hostkeymasterd/host/include/android/hardware/hostkeymaster/: BnHostKeymasterd.h  BpHostKeymasterd.h  IHostKeymasterd.h
host/hostkeymasterd/host/include/hostkeymaster/: host_keymaster_context.h  host_keymaster_err.h  host_keymaster_ipc.h  host_keymaster_logger.h
host/hostkeymasterd/host/include/keymaster/: new
host/libbinder_test_ubuntu/: CMakeLists.txt  IMultiply.cpp  ISum.cpp  README.MD  multiplyClientUbuntu.cpp  sumServiceUbuntu.cpp
host/libbinder_test_ubuntu/include/multiply/: BnMultiply.h  BpMultiply.h  IMultiply.h
host/libbinder_test_ubuntu/include/sum/: BnSum.h  BpSum.h  ISum.h
host/libbinder_test_ubuntu/multiply/: IMultiply.aidl
